--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,12 +14,29 @@
   --foreground: #171717;
 }
 
-@theme inline {
+@theme  {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+	--color-green-100: #70C05B;
+  --color-orange-100: #FF6633;
+  --color-orange-200: #FCD5BA;
+  --color-black-100: #414141;
+  --color-white-100: #FFFFFF;
+  --color-grey-100: #8F8F8F;
+  --color-grey-200: #BFBFBF;
+	--color-grey-300: #F3F2F1;
+	--color-beige-100: #F9F4E2;
+
+	--breakpoint-sm: 360px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-desktop: 1440px;
 }
+
+
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -32,11 +49,13 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0; /* reset browser default margin to avoid layout shifts */
+  padding: 0;
 }
 
-.swiper {
-  padding: 0 ;
-  margin: 0 ;
+/* sensible box sizing for layout calculations */
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
 .swiper-button-disabled {
