--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,14 @@
+/* eslint-disable */
 @import 'swiper/css';
 @import 'swiper/css/navigation';
 @import 'swiper/css/thumbs';
 @import 'swiper/css/free-mode';
 
 @import "tailwindcss";
- @plugin './hero.ts';
- @source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
- @custom-variant dark (&:is(.dark *));
+@plugin './hero.ts';
+@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
+@source '../**/*.{js,ts,jsx,tsx}';
+@custom-variant dark (&:is(.dark *));
 
 
 :root {
@@ -17,8 +19,9 @@
 @theme  {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-sans: var(--font-montserrat);
   --font-mono: var(--font-geist-mono);
+  --font-rubik: var(--font-rubik);
 
 	--color-green-100: #70C05B;
   --color-orange-100: #FF6633;
@@ -48,9 +51,12 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0; /* reset browser default margin to avoid layout shifts */
+  font-family: var(--font-montserrat), Arial, Helvetica, sans-serif;
+  margin: 0; /* reset browser default margin+ to avoid layout shifts */
   padding: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 /* sensible box sizing for layout calculations */
